--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -17,6 +17,16 @@
     <input type="text" name="password">
   </div>
 
+  <div>
+    <label for="name">your name</label>
+    <input type="text" name="name">
+  </div>
+  
+  <div>
+    <label for="groupName">group name</label>
+    <input type="text" name="groupName">
+  </div>
+
   <input type="submit" value="SuBMit">
 </form>
 </body>
