created function for gettingMembers

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
   <% if (user) {%>
     <h3>Welcome <%= user.name %></h3>
     <h3>Your in a group called <%= user.groupname %></h3>
-    <h3>Other members of this group include <%= user.groupname %></h3>
+    <h3>Loop goes here</h3>
   <% } %>
 </body>
 </html>
