got it so a person can sign up, declare a group, when log in directed to a profile page, and if you navigate back hoe there is a message which states that you are still logged in with users name

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,9 +21,7 @@
   </div>
 
   <% if (user) {%>
-    <h3>Welcome <%= user.name %></h3>
-    <h3>Your in a group called <%= user.groupname %></h3>
-    <h3>Loop goes here</h3>
+    <h3><%= user.name %> you are logged in.</h3>
   <% } %>
 </body>
 </html>
