added some works to database, commiting before trying to display works of perticular artist

--- a/views/users/user_profile.ejs
+++ b/views/users/user_profile.ejs
@@ -5,8 +5,8 @@
   <title><%= user.name %></title>
 </head>
 <body>
-  <div>
-    <a href="/images">images</a>
+  <div class="profilePic">
+    <img src=<%= user.img_url %>>
   </div>
 
   <% if (user) {%>
