--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,3 +8,4 @@
 <title>Group Crit</title>
 
 <link href="/css/styles.css" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
