--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <head>
+    <%- include ./partials/head %>
+  </head>
 <body>
-  <div>
-    <a href="/users/new">Signup</a>
+
+  <h1>Group-Crit</h1>
+
+  <div id="HomeLinks" >
+    <li>
+      <% if (!user) {%>
+      <a href="/users/new">Signup</a>
+      <% } %>
+    </li>
+    <li>
+      <% if (!user) {%>
+      <a href="/users/login">Login</a>
+      <% } %>
+    </li>
+    <li>
+      <% if (user) {%>
+      <a href= <%= "/users/" + user.id %> >Home</a>
+      <% } %>
+    </li>
+    <li>
+      <% if (user) {%>
+      <form method="post" action="users/logout?_method=DELETE">
+            <button id="logout"><%= user.name %>: logout</button>
+      </form>
+
+      <% } %>
+    </li>
+
   </div>
+
   <div>
-    <a href="/users/login">Login!</a>
-  </div>
-  <div>
+    <!-- <% if (user) {%>
     <form method="post" action="users/logout?_method=DELETE">
-      <button>logout</button>
+      <button>logout:<%= user.name %></button>
     </form>
+    <% } %> -->
   </div>
 
-  <% if (user) {%>
-    <h3><%= user.name %> you are logged in.</h3>
-  <% } %>
-
-  <% if (user) {%>
-    <h3><a href= <%= "/users/" + user.id %> >Go to your page</a></h3>
-  <% } %>
-</body>
+  <%- include ./partials/footer %>
+ </body>
 </html>
