set up a new route to get group page to render, now to populate it with correct data

--- a/views/users/user_profile.ejs
+++ b/views/users/user_profile.ejs
@@ -22,7 +22,7 @@
     <% }) %>
   </div>
   <% } %>
-  <h3><a href="#">Check out other <%= user.groupname %> recent works</a></h3>
+  <h3><a href="/group/">Check on the other <%= user.groupname %></a></h3>
   <div>
     <form method="post" action="/users/logout?_method=DELETE">
       <button>logout</button>
