--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -4,7 +4,7 @@
     <%- include ../partials/head %>
   </head>
 <body>
-<h1>Sign Up Page</h1>
+<h1>Sign Up</h1>
 <form action="/users" method="post">
   <div>
     <label for="email">email</label>
