--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -4,6 +4,7 @@
     <%- include ../partials/head %>
   </head>
 <body>
+  <h1>Login</h1>
   <form action="/users/login" method="post">
     <div>
       <label for="email">email</label>
