set it up so that user can only edit or delete their own commments

--- a/views/edit_comment.ejs
+++ b/views/edit_comment.ejs
@@ -2,5 +2,6 @@
     Comment:<br />
   <textarea name='comment' id='comment'></textarea><br />
   <input type='hidden' name='userID' id='userID' value= "idgohere" />
+  <input type='hidden' name='test' id='test' value= "idgohere" />
   <input type='submit' value='Submit' />
 </form>
