--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,9 @@ h1 {
   font-size: 130px;
 }
 
+
 #ProfileHeading {
+  justify-content: center;
   width: 150px;
   padding: 1px;
 
@@ -19,11 +21,13 @@ h1 {
   text-align: center;
 }
 #ProfilePicture img {
+    text-align: center;
     width: 150px;
     padding: 1px;
 }
 
 #ImageContainer img {
+    text-align: center;
     height:200px;
     width: 150px;
     border: solid black 1px;
