got it so someone can update their own comment and they are redirected to group page

--- a/views/works/work_profile.ejs
+++ b/views/works/work_profile.ejs
@@ -20,7 +20,7 @@
           <p id = <%= comment.id %>><%= comment.id %> : <%= comment.name %> : <%= comment.commentcontent %>
 
               <% if (comment.name === user.name) { %>
-              <a href= "/work/<%= workId %>/edit" > edit </a><a href="#"> delete </a>
+              <a href= "/comment/<%= comment.id %>/edit" > edit </a><a href="#"> delete </a>
               <% } %>
 
           </p>
