--- a/views/edit_comment.ejs
+++ b/views/edit_comment.ejs
@@ -1,7 +1,7 @@
-<form action = "/work/<%=workID%>?_method=PUT" method='post'>
+<form action = "/comment/<%=commentID%>/?_method=PUT" method='post'>
     Comment:<br />
   <textarea name='comment' id='comment'></textarea><br />
-  <p><%= renderComment[0].id %></p>
-  <input type='hidden' name='commentID' id='commentID' value= <%= renderComment[0].id %> />
+  <p><%= getComment[0].id %></p>
+  <input type='hidden' name='commentID' id='commentID' value= <%= getComment[0].id %> />
   <input type='submit' value='Submit' />
 </form>
