all functionality and basic design ready to send up to heroku

--- a/views/edit_comment.ejs
+++ b/views/edit_comment.ejs
@@ -1,7 +1,6 @@
 <form action = "/comment/<%=commentID%>/?_method=PUT" method='post'>
-    Comment:<br />
+    Edit Comment:<br />
   <textarea name='comment' id='comment'></textarea><br />
-  <p><%= getComment[0].id %></p>
   <input type='hidden' name='commentID' id='commentID' value= <%= getComment[0].id %> />
   <input type='submit' value='Submit' />
 </form>
