--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <div>
-    <p><a href="/group/">Check on the other <%= user.groupname %></a>
+    <a href="/group/"><%= user.groupname %></a>
     <form method="post" action="/users/logout?_method=DELETE">
         <button>logout</button>
-    </form></p>
+    </form>
 </div>
