--- a/views/group_profile.ejs
+++ b/views/group_profile.ejs
@@ -5,7 +5,7 @@
   </head>
 <body>
 
-<h2 id="groupname"><%= groupMembers[0].groupname %></h2>
+<h2 id="groupname"><%= groupMembers[0].groupname %></h2><br />
 
 <div id="ImageContainer"><%
   name = '';
