--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,3 +9,4 @@
 
 <link href="/css/styles.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="/css/skeleton.css">
