--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
     <%- include ./partials/head %>
   </head>
 <body>
+    <img src ="http://pngimg.com/upload/bug_PNG3978.png" id="bug" height="92" width="92">
 
   <h1 id="hometitle" >Group-Crit</h1>
 
