--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,3 +10,4 @@
 <link href="/css/styles.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/css/skeleton.css">
+<link rel='shortcut icon' type='image/x-icon' href='http://www.stackoverflow.com/favicon.ico' />
